# polymarket-bot

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  agent-instructions.md  btc5min_results.json  btc_predict.py  cargo_err.txt  cargo_rel_err.txt  check_exposure.py  config.toml  ecosystem.config.js  find_fast.py  fix_resolved.py  help_out.txt  paper_account.json  portfolio_out.txt  portfolio_state.json  reset_portfolio.py  start_bot.bat  start_btc5min.bat  strategy_config.json  strategy_trades.json  test_slugs.py  weather_multi_source.py
scripts/: find_fast2.py  find_market.py  reconcile.py  reconcile_v2.py  show_positions.py  sync_dashboard.py  update_portfolio.py
src/: main.rs
src/api/: client.rs  endpoints.rs  mod.rs
src/arbitrage/: mod.rs
src/auth/: mod.rs
src/btc5min/: mod.rs
src/models/: market.rs
src/notifications/: mod.rs
src/orders/: mod.rs
src/paper/: mod.rs
src/portfolio/: mod.rs
src/signals/: mod.rs
src/strategy/: ai_evaluator.rs  config.rs  engine.rs  evaluator.rs  logger.rs  mod.rs  risk.rs  scanner.rs
src/weather/: forecast.rs  markets.rs  mod.rs  noaa.rs  observations.rs  open_meteo.rs  strategy.rs
