[package]
name = "polymarket-bot"
version = "0.1.0"
edition = "2021"
description = "Automated trading bot for Polymarket prediction markets"
authors = ["Nazri Hussain"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Crypto / Ethereum signing
alloy = { version = "1.6", features = ["full", "signer-local"] }

# Config
toml = "0.8"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4"] }

# HMAC auth
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

# Hex encoding
hex = "0.4"

# Error handling
anyhow = "1"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Statistics (normal distribution for weather strategy)
statrs = "0.17"
